# TurtleBot

./: README.md
src/publish_sensor_info/: package.xml  setup.py
src/publish_sensor_info/publish_sensor_info/: publisher.py  subscriber.py
turtlebot3_ws/install/: local_setup.sh  setup.sh
turtlebot3_ws/install/autonomous_driving/lib/autonomous_driving/: sensor_info  sensor_info2
turtlebot3_ws/install/autonomous_driving/share/autonomous_driving/: package.dsv  package.ps1  package.sh  package.xml
turtlebot3_ws/install/ball_locator/lib/ball_locator/: ball_locator
turtlebot3_ws/install/ball_locator/share/ball_locator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
turtlebot3_ws/install/ld08_driver/lib/ld08_driver/: ld08_driver
turtlebot3_ws/install/ld08_driver/share/ld08_driver/: package.sh
turtlebot3_ws/install/lidar_tracking/lib/lidar_tracking/: findball
turtlebot3_ws/install/lidar_tracking/share/lidar_tracking/: package.sh  package.xml
turtlebot3_ws/install/pub_sub/share/pub_sub/: package.sh  package.xml
turtlebot3_ws/install/publish_sensor_info/lib/publish_sensor_info/: pub  sub
turtlebot3_ws/install/publish_sensor_info/share/publish_sensor_info/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
turtlebot3_ws/install/sb3_inference/lib/sb3_inference/: ball_data  camera_inference  pusher_inference  pusher_inference_old  sonic_pub
turtlebot3_ws/install/sb3_inference/share/sb3_inference/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
(+41 files in other folders)
