<?xml version="1.0"?>
<package format="3">
  <name>publish_sensor_info</name>
  <version>0.0.1</version>
  <description>ROS2 Projekt</description>
  <maintainer email="mike.hughes0506@gmail.com">Mike</maintainer>
  <maintainer email="bla.bla@example.com">Sebastian</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>